# ramulator2_pathoram

./: .gitignore  1.install_requirements.sh  2.install_project.sh  3.build.sh  4.run.sh  README.md  channels_counters_plot.py  convert_trace_to_simpleo3.py  memory_system_plot.py  run_experiments.py  stash_plots.py
pathoram/: config_oram_hbm2.yaml  config_oram_hbm2_ch1.yaml  config_oram_hbm2_ch2.yaml  config_oram_hbm2_ch4.yaml  example_config_oram.yaml  run_experiments.py  run_hbm2.sh  setup_debug.sh  setup_release.sh
pathoram/src/addr_mapper/impl/: linear_mappers.cpp
pathoram/src/memory_system/: CMakeLists.txt
pathoram/src/memory_system/impl/: path_ORAM_system.cpp
pathoram/src/memory_system/impl/oram/: bucket_header.h  oram_controller.cpp  oram_controller.h  oram_tree.h
pathoram/src/memory_system/impl/oram/components/impl/: access_logic.cpp  address_logic_double_tree.cpp  integrity_checker.cpp  integrity_controller.cpp  position_map.cpp  stash.cpp
pathoram/src/memory_system/impl/oram/components/inc/: access_logic.h  address_logic_double_tree.h  integrity_checker.h  integrity_controller.h  mee.h  oram_tree_info.h  position_map.h  stash.h
pathoram/src/memory_system/impl/oram/components/interfaces/: iaddress_logic.h  iintegrity_controller.h  imee.h  ioram_controller.h  iposition_map.h  istash.h
pathoram/src/memory_system/impl/oram/oob/: bucket.h  oob_tree.cpp  oob_tree.h
pathoram/traces/mobilenet/: layer23.trace  layer5.trace
